# stumblestack

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.json  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  agent_allowlist.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  pitfall_request.md
.github/PULL_REQUEST_TEMPLATE/: pitfall.md
.github/workflows/: attest-index.yml  embeddings.yml  lint.yml  pages.yml  secret-scan.yml  validate.yml
docs/: API.md  DESIGN.md  DESIGN_REVIEW.md  RELEASING.md  RUNBOOK.md  STEWARDSHIP.md
eval/: queries.jsonl
mcp-server/: README.md  pyproject.toml  requirements.txt
mcp-server/src/stumblestack_mcp/: __init__.py  cli.py  embeddings.py  search.py  server.py  source.py  submit.py  telemetry.py
mcp-server/tests/: conftest.py  test_build_stats.py  test_cli.py  test_embeddings.py  test_lifecycle.py  test_ranker_parity.py  test_schema_v2.py  test_scripts.py  test_search.py  test_security.py  test_server.py  test_sharding.py  test_source.py  test_telemetry.py
pitfalls/anthropic-api/: anthropic-messages-api-rejects-a-system-prompt-sent-as-a-rol.md  anthropic-messages-api-request-fails-because-max-tokens-was.md  anthropic-prompt-caching-silently-does-nothing-below-the-min.md  anthropic-tool-result-must-be-in-a-user-message-and-referenc.md  anthropic-vision-request-fails-without-media-type-on-a-base6.md  assistant-message-prefill-fails-when-the-content-ends-with-t.md  extended-thinking-breaks-on-the-next-turn-when-prior-thinkin.md  output-truncated-silently-because-stop-reason-was-max-tokens.md  retrying-an-anthropic-529-overloaded-error-without-backoff-m.md
pitfalls/claude-code/: claude-code-bash-exported-env-vars-and-cd-do-not-persist-acr.md  claude-code-edit-errors-because-the-file-was-not-read-first.md  claude-code-edit-fails-when-old-string-is-not-unique-in-the.md  claude-code-read-edit-require-absolute-paths-not-relative-on.md  edit-tool-line-number-prefix.md  using-bash-grep-find-instead-of-the-grep-glob-tools-wastes-c.md
pitfalls/docker/: cmd-in-shell-form-does-not-forward-sigterm-so-the-container.md  dockerfile-busts-the-layer-cache-by-copying-source-before-in.md  missing-dockerignore-sends-the-whole-working-tree-as-build-c.md
pitfalls/git/: commits-made-on-a-detached-head-are-orphaned-after-checkout.md  git-clean-fdx-deletes-untracked-files-including-ignored-ones.md  (+2 more)
schemas/: pitfall.schema.json
scripts/: build_embeddings.py  build_index.py  build_site.py  build_stats.py  eval_search.py  index_check.py  staleness_report.py  validate.py
(+32 files in other folders)
